--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 [default]
-aws_access_key_id = AKIAYCVRVMQUM7BQZKRI
-aws_secret_access_key = =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
+aws_access_key_id = AKIAUILFDRYNBGJHPYMZ
+aws_secret_access_key = Thisishonestlynotarealaccesskey123456
