--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 [default]
 aws_access_key_id = AKIAUILFDRYNBGJHPYMZ
 aws_secret_access_key = Thisishonestlynotarealaccesskey123456
+
+aws_access_key_id = AKIAYCVRVMQUCTM4KR7M
+aws_secret_access_key = Thisishonestlynotarealaccesskey123456
