--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 [default]
-aws_access_key_id = AKIAUILFDRYNBGJHPYMZ
+aws_access_key_id = AKIA47YTMMSA2RHLYJKX
 aws_secret_access_key = Thisishonestlynotarealaccesskey123456
 
-aws_access_key_id = AKIAYCVRVMQUCTM4KR7M
-aws_secret_access_key = Thisishonestlynotarealaccesskey123456
+
